force-app/main/default/objects/R360_Source_Contract__mdt/R360_Source_Contract__mdt.object-meta.xml
<CustomObject><label>Resource 360 Source Contract</label><pluralLabel>Resource 360 Source Contracts</pluralLabel><visibility>Public</visibility></CustomObject>