force-app/main/default/objects/R360_Source_Contract__mdt/fields/Approval_Status__c.field-meta.xml
<CustomField><fullName>Approval_Status__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Approval Status</label><length>40</length><type>Text</type></CustomField>