force-app/main/default/objects/R360_Source_Contract__mdt/fields/Authoritative_Source__c.field-meta.xml
<CustomField><fullName>Authoritative_Source__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Authoritative Source</label><length>120</length><type>Text</type></CustomField>