force-app/main/default/objects/R360_Source_Contract__mdt/fields/Blocking__c.field-meta.xml
<CustomField><fullName>Blocking__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Blocking</label><type>Checkbox</type></CustomField>