force-app/main/default/objects/R360_Source_Contract__mdt/fields/Canonical_Fields__c.field-meta.xml
<CustomField><fullName>Canonical_Fields__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Canonical Fields</label><length>255</length><type>Text</type></CustomField>