force-app/main/default/objects/R360_Source_Contract__mdt/fields/Contract_Version__c.field-meta.xml
<CustomField><fullName>Contract_Version__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Contract Version</label><length>40</length><type>Text</type></CustomField>