force-app/main/default/objects/R360_Source_Contract__mdt/fields/Data_Classification__c.field-meta.xml
<CustomField><fullName>Data_Classification__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Data Classification</label><length>80</length><type>Text</type></CustomField>