force-app/main/default/objects/R360_Source_Contract__mdt/fields/Data_Owner__c.field-meta.xml
<CustomField><fullName>Data_Owner__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Data Owner</label><length>120</length><type>Text</type></CustomField>