force-app/main/default/objects/R360_Source_Contract__mdt/fields/Direction__c.field-meta.xml
<CustomField><fullName>Direction__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Direction</label><length>30</length><type>Text</type></CustomField>