force-app/main/default/objects/R360_Source_Contract__mdt/fields/Endpoint_Alias__c.field-meta.xml
<CustomField><fullName>Endpoint_Alias__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Endpoint Alias</label><length>120</length><type>Text</type></CustomField>