force-app/main/default/objects/R360_Source_Contract__mdt/fields/Entity_Type__c.field-meta.xml
<CustomField><fullName>Entity_Type__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Entity Type</label><length>80</length><type>Text</type></CustomField>