force-app/main/default/objects/R360_Source_Contract__mdt/fields/Freshness_Hours__c.field-meta.xml
<CustomField><fullName>Freshness_Hours__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Freshness Hours</label><precision>6</precision><scale>0</scale><type>Number</type></CustomField>