force-app/main/default/objects/R360_Source_Contract__mdt/fields/Stable_Identity__c.field-meta.xml
<CustomField><fullName>Stable_Identity__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Stable Identity</label><length>120</length><type>Text</type></CustomField>